--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 
 .container{
 	max-width: 1200px;
-	margin: 0 auto;
+	width:90%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -26,31 +26,22 @@ h4 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
-
-}
-h1 {
-	font-size: 1em;
-}
-h2 {
-    font-size: 1em;
-}
-h3 {
-	font-size: 1em;
-}
-h4 {
-	font-size: 1em;
 }
 
 p {
-	font-size: 1em;
+	font-size: .875em;
 	line-height: 21px;
-    padding: 0 30px;
+
+}
+ul {
+	margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+	text-align:center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -58,8 +49,10 @@ header {
 }
 
 header h1 {
+	font-size: 1.875em;
 	margin: 0;
-	padding: 38px 0;
+	padding: 38px 20px 20px 20px;
+	border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
@@ -67,7 +60,8 @@ header h1 span {
 
 header nav {
 
-	padding: 46px 0;
+	padding: 20px 0;
+	width: 100%;
 }
 header nav ul {
 	margin: 0;
@@ -76,9 +70,9 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 14px;
-	padding: 0 10px;
-	display: inline;
+	font-size: .875em;
+	padding: 10px 0;
+	list-style: none;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -88,56 +82,35 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content:center;
 	align-items: center;
+	flex-flow:row wrap;
 
 }
 
-.main-image {
-
-
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
+	font-size: 1.125em;
 }
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.5625em;
 }
 
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+	width: 100%;
 	border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
 }
 
 .menu {
@@ -152,40 +125,75 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125em;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5em;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
 	text-align: center;
+	width:100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 1em;
+	font-size: .875em;
 }
 
-@media all and (max-width: 768px) {
-		body {
-			padding: 1em;
-		}
-}
+@media only screen and (min-width: 768px) {
+	/* Tablet Styles here */
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
 
-@media (min-width: 1200px) {
-		.flex-items {
-			flex-basis: 30%;
-			border-bottom: none;
-		}
 	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+
+	}
+
+.section-two {
+	border-left: 1px solid #eee;
+	border-right: 1px solid #eee;
+	padding: 0 20px;
+}
+
+}
+
+@media only screen and (min-width: 1200px){
+	/* Desktop styles here */
+
+header {
+	justify-content: space-between;
+}
+
+header h1 {
+	width: 30%;
+	padding: 0;
+	border-bottom: none;
+	text-align: left;
+}
+header nav {
+	width: 40%;
+}
+
+header nav ul {
+	display: flex;
+	justify-content: space-between;
+}
+}
